# hiden

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
docs/: conf.py  index.md
src/hiden/: __init__.py  cap2.py  massoft_client.py
tests/: test_package.py
